# filelens

./: .gitignore  Cargo.toml  README.md  dbt_project.yml  pyproject.toml
.github/workflows/: release.yml
Formula/: filelens.rb
dbt/: README.md  dbt_project.yml  profiles.yml.example
dbt/macros/: filelens_columns.sql  filelens_raw_sync.sql
dbt/models/: sources.yml
dbt/models/marts/: fct_clinical_records.sql  fct_fhir_resources.sql  fct_filelens_records.yml  fct_naaccr_cases.sql  fct_procurement_lines.sql  fct_procurement_records.sql  fct_record_attributes.sql  idx_filelens_records.sql
dbt/models/staging/: stg_clinical_records.sql  stg_filelens_records.sql  stg_filelens_records.yml  stg_procurement_records.sql
examples/hard/cxml/: 01_simple_order.cxml  02_multiple_items.cxml  03_nested_extrinsics.cxml  04_missing_optional_fields.cxml  05_multiple_suppliers.cxml  06_money_currency_variants.cxml  07_duplicate_line_numbers.cxml  08_namespaces_weird.cxml  09_comments_processing_instructions.cxml  10_empty_values.cxml
examples/public/fhir/: patient-example.json  patient-example.ttl  patient-example.ttl.html
examples/public/hl7/: oru_r01.msg
examples/public/json/: nested_lab_result.json
examples/public/misc/: messy_lab_export.csv
examples/public/trade/: advanced_shipping_notice_1.cxml  advanced_shipping_notice_2.cxml  equote_request.cxml  invoice_request.cxml  po_acknowledgement.cxml  punchout_request.cxml
examples/public/xml/: clinical.xml
scripts/: auto_load_and_run_dbt.sh  convert_inputs.sh
src/: main.rs
