[package]
name = "filelens"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0"
calamine = "0.31"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
polars = { version = "0.51", default-features = false, features = ["dtype-date", "fmt", "parquet"] }
quick-xml = "0.38"
rio_api = "0.8"
rio_turtle = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
